# telemetry_hospital_santa_ana

./: .env.example  .env.santana_parnaiba.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_default_alert_rules.py  0003_schema_refactor_v1.py  0004_seed_alert_rules_v1.py  0005_seed_barueri_production.py  0006_add_map_fields_installations.py  0007_fix_timestamptz.py  0008_alert_engine_v2.py  0009_installation_behavior_baselines.py  0010_user_auth_extension.py  0011_telegram_notifications.py  0012_fix_min_severity_vocabulary.py  0013_alert_events_updated_at.py  0014_telegram_chat_multi_user.py  0015_telegram_multi_link.py  0016_analog_per_device.py  0017_seed_santana_parnaiba.py  0018_reservoir_config.py  0019_normalize_user_status.py  0020_raw_messages_dedup_hash.py  0021_devices_external_id.py  0022_energy_measurements.py  0023_installations_kind_seed_escola.py
backend/app/: cli.py  config.py  logging.py  main.py  rate_limit.py
backend/app/alerts/: __init__.py  behavior.py  capabilities.py  device_capabilities.py  rendering.py  severity.py  signals.py
backend/app/api/: deps.py
backend/app/bridges/: __main__.py  _common.py  mqtt_bridge.py
backend/app/db/: base.py  session.py
backend/app/schemas/: admin.py  alert_simulation.py  alerts.py  audit.py  auth.py  telegram.py  telemetry.py
backend/app/services/: alert_notification_service.py  alert_simulation_service.py  auth.py  email_codes.py  email_sender.py  email_templates.py  reservoir_config.py  telegram_client.py  telegram_link_service.py  (+2 more)
backend/scripts/: create_admin.py  create_approver.py
backend/telemetry_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+160 files in other folders)
