[project]
name = "telemetry-backend"
version = "0.1.0"
description = "Backend da plataforma telemetry — API FastAPI + bridge MQTT + workers"
requires-python = ">=3.12"
readme = {text = "Backend da plataforma telemetry.", content-type = "text/plain"}

# Fase 4 — db, config, logging
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",    # driver síncrono para Alembic
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "tzdata>=2026.2",
    "structlog>=24.0",
    # Fase 5 — bridge
    "paho-mqtt>=2.1.0",
    # Fase 9 — api
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    # Fase 17 — auth completo
    "aiosmtplib>=3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.0",
    # Telegram — cliente HTTP async para a Bot API
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ASYNC",
]
ignore = [
    "E501", # line too long (ruff format já cuida)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
